# EdenToMC

./: .gitignore  AnvilReader.cpp  AnvilReader.h  CLAUDE.md  Downsampler.cpp  Downsampler.h  EdenFileLoader.cpp  EdenFileReader.vcxproj  EdenWriter.cpp  EdenWriter.h  MC2EdenConverter.cpp  MC2EdenConverter.h  MCToEdenMapper.cpp  MCToEdenMapper.h  Noise.cpp  Noise.h  README.md  TerrainGenerator.cpp  TerrainGenerator.h  broken-terrain-535608.eden  main.cpp
.github/workflows/: pages.yml  release.yml
converter/: Cargo.toml
converter/src/: anvil.rs  block_map.rs  eden.rs  eden_writer.rs  level_dat.rs  lib.rs  nbt.rs  noise.rs  terrain.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  types.ts
web/src/components/: BlockMappingEditor.tsx  DropZone.tsx
web/src/wasm/: eden_converter.d.ts  eden_converter.js  eden_converter_bg.wasm  eden_converter_bg.wasm.d.ts  package.json
